log.log
/home/xyenchi/dragon/riscv-vector-intrinsic-fuzzing/build/output.c: In function 'vmadc_vv_operator_2':
/home/xyenchi/dragon/riscv-vector-intrinsic-fuzzing/build/output.c:289:57: error: incompatible type for argument 1 of '__riscv_vmerge_vxm_i8mf8'
  289 |         vint8mf8_t vec_store = __riscv_vmerge_vxm_i8mf8(vec_value_3_0, zero, 1, vl);
      |                                                         ^~~~~~~~~~~~~
      |                                                         |
      |                                                         vbool64_t
In file included from /home/xyenchi/dragon/riscv-vector-intrinsic-fuzzing/build/output.c:9:
/home/xyenchi/dragon/riscv-gnu-toolchain/test-rif/lib/gcc/riscv64-unknown-elf/14.2.0/include/riscv_vector.h:40:9: note: expected 'vint8mf8_t' but argument is of type 'vbool64_t'
   40 | #pragma riscv intrinsic "vector"
      |         ^~~~~
/home/xyenchi/dragon/riscv-vector-intrinsic-fuzzing/build/output.c:289:72: error: incompatible type for argument 2 of '__riscv_vmerge_vxm_i8mf8'
  289 |         vint8mf8_t vec_store = __riscv_vmerge_vxm_i8mf8(vec_value_3_0, zero, 1, vl);
      |                                                                        ^~~~
      |                                                                        |
      |                                                                        vint8mf8_t
/home/xyenchi/dragon/riscv-gnu-toolchain/test-rif/lib/gcc/riscv64-unknown-elf/14.2.0/include/riscv_vector.h:40:9: note: expected 'signed char' but argument is of type 'vint8mf8_t'
   40 | #pragma riscv intrinsic "vector"
      |         ^~~~~
/home/xyenchi/dragon/riscv-vector-intrinsic-fuzzing/build/output.c:289:78: error: incompatible type for argument 3 of '__riscv_vmerge_vxm_i8mf8'
  289 |         vint8mf8_t vec_store = __riscv_vmerge_vxm_i8mf8(vec_value_3_0, zero, 1, vl);
      |                                                                              ^
      |                                                                              |
      |                                                                              int
/home/xyenchi/dragon/riscv-gnu-toolchain/test-rif/lib/gcc/riscv64-unknown-elf/14.2.0/include/riscv_vector.h:40:9: note: expected 'vbool64_t' but argument is of type 'int'
   40 | #pragma riscv intrinsic "vector"
      |         ^~~~~
/home/xyenchi/dragon/riscv-vector-intrinsic-fuzzing/build/output.c: In function 'vsuxei32_v_operator_1':
/home/xyenchi/dragon/riscv-vector-intrinsic-fuzzing/build/output.c:369:9: error: passing argument 1 of '__riscv_vle64_v_i64m1' makes pointer from integer without a cast [-Wint-conversion]
  369 |         placeholder13, vl);
      |         ^~~~~~~~~~~~~
      |         |
      |         int64_t {aka long int}
/home/xyenchi/dragon/riscv-gnu-toolchain/test-rif/lib/gcc/riscv64-unknown-elf/14.2.0/include/riscv_vector.h:40:9: note: expected 'const long int *' but argument is of type 'int64_t' {aka 'long int'}
   40 | #pragma riscv intrinsic "vector"
      |         ^~~~~
/home/xyenchi/dragon/riscv-vector-intrinsic-fuzzing/build/output.c:375:24: error: incompatible type for argument 3 of '__riscv_vremu_vx_u32mf2_m'
  375 |         placeholder22, vec_value_5_0, 500, vl);
      |                        ^~~~~~~~~~~~~
      |                        |
      |                        vuint32mf2_t
/home/xyenchi/dragon/riscv-gnu-toolchain/test-rif/lib/gcc/riscv64-unknown-elf/14.2.0/include/riscv_vector.h:40:9: note: expected 'unsigned int' but argument is of type 'vuint32mf2_t'
   40 | #pragma riscv intrinsic "vector"
      |         ^~~~~
/home/xyenchi/dragon/riscv-vector-intrinsic-fuzzing/build/output.c:374:17: error: too many arguments to function '__riscv_vremu_vx_u32mf2_m'
  374 | vec_value_5_0 = __riscv_vremu_vx_u32mf2_m(mask_value_3_0, // generated by getNewPlaceholderName
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~~
/home/xyenchi/dragon/riscv-gnu-toolchain/test-rif/lib/gcc/riscv64-unknown-elf/14.2.0/include/riscv_vector.h:40:9: note: declared here
   40 | #pragma riscv intrinsic "vector"
      |         ^~~~~
/home/xyenchi/dragon/riscv-vector-intrinsic-fuzzing/build/output.c:379:9: error: implicit declaration of function 'vsuxei32_v_i64m1_m' [-Wimplicit-function-declaration]
  379 |         vsuxei32_v_i64m1_m (mask_value_3_0, // generated by getNewPlaceholderName
      |         ^~~~~~~~~~~~~~~~~~
/home/xyenchi/dragon/riscv-vector-intrinsic-fuzzing/build/output.c: In function 'main':
/home/xyenchi/dragon/riscv-vector-intrinsic-fuzzing/build/output.c:584:1: error: 'ret' undeclared (first use in this function)
  584 | ret &= golden_vinit_rif_operator_12();
      | ^~~
/home/xyenchi/dragon/riscv-vector-intrinsic-fuzzing/build/output.c:584:1: note: each undeclared identifier is reported only once for each function it appears in
